spark-operator-file-uploader/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-operator-file-uploader-service
  namespace: spark-operator
spec:
  selector:
    app: spark-operator-file-uploader
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
